--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "ts-node-dev src/index.ts",
     "lint": "ts-standard",
+    "lint-fix": "ts-standard --fix",
     "test": "echo \"Error: no test specified\" && exit 1",
     "tsc": "tsc"
   },
@@ -25,6 +26,7 @@
     "parserOptions": {
       "project": "./tsconfig.json"
     },
+    
     "extends": "./node_modules/ts-standard/eslintrc.json"
   }
 }
